<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <ListPreference
        android:key="@string/pref_currency_key"
        android:title="@string/pref_currency_title"
        android:summary="@string/pref_currency_summ"
        android:entries="@array/Currencies_Entries"
        android:entryValues="@array/Currencies_Values"
		android:defaultValue="GBP" />

    <CheckBoxPreference 
        android:key="@string/pref_negativebrackets_key"
        android:title="@string/pref_negativebrackets_title"
        android:summary="@string/pref_negativebrackets_summ"
        android:defaultValue="false" />
    
    <ListPreference
        android:key="@string/pref_dateformat_key"
        android:title="@string/pref_dateformat_title"
        android:summary="@string/pref_dateformat_summ"
        android:entries="@array/Dateformat_Entries"
        android:entryValues="@array/Dateformat_Entries"
		android:defaultValue="dd/mm/yy" />
    
</PreferenceScreen>