<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_addtransaction"
        android:icon="@drawable/content_new"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/add_transaction"/>
	<item
		android:id="@+id/menu_acceptreconcilechanges"
		android:icon="@drawable/navigation_accept"
		android:orderInCategory="2"
		android:showAsAction="always"
		android:title="@string/acceptreconcilechanges" />
    <item
        android:id="@+id/menu_reconcile"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/reconcile_transactions"/>
    <item
        android:id="@+id/menu_showhidereconciled"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/show_hide_reconciled"/>
    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/send_feedback"/>
    <item
            android:id="@+id/menu_settings"
            android:orderInCategory="99"
            android:showAsAction="never"
            android:title="@string/menu_settings"/>
</menu>
