<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemlinearlayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/layoutReconciled"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chkReconciled"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/transaction_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="2dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="8dip"
            android:text="@string/design_transaction_desc"
            android:textColor="#222222" />

        <TextView
            android:id="@+id/transaction_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_desc"
            android:paddingBottom="2dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="2dp"
            android:text="@string/design_transaction_cat"
            android:textColor="#888888" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_category"
            android:paddingBottom="8dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="2dp"
            android:text="@string/design_transaction_date"
            android:textColor="#888888" />

        <TextView
            android:id="@+id/transaction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="8dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="8dip"
            android:text="@string/design_transaction_value"
            android:textColor="#669900" />
    </RelativeLayout>

</LinearLayout>